updated the table page to be without css styling

--- a/tablePage.html
+++ b/tablePage.html
@@ -8,29 +8,27 @@
   <body>
     <h3>Table Num .2</h3>
     <br />
-    <table style="border: 1px solid black">
-      <tr style="border: 1px solid black">
-        <td rowspan="2" style="border: 1px solid black">Row 1-2, col 1</td>
-        <td style="border: 1px solid black">Row 1, col 2</td>
-        <td style="border: 1px solid black">Row 1, col 3</td>
-        <td style="border: 1px solid black">Row 1, col 4</td>
+    <table border="1px">
+      <tr>
+        <td rowspan="2">Row 1-2, col 1</td>
+        <td>Row 1, col 2</td>
+        <td>Row 1, col 3</td>
+        <td>Row 1, col 4</td>
       </tr>
 
       <tr>
-        <td rowspan="2" colspan="2" style="border: 1px solid black">
-          Row 2-3, Col 2-3
-        </td>
-        <td style="border: 1px solid black">Row 2, col 4</td>
+        <td rowspan="2" colspan="2">Row 2-3, Col 2-3</td>
+        <td>Row 2, col 4</td>
       </tr>
       <tr>
-        <td style="border: 1px solid black">Row 3, col 1</td>
-        <td style="border: 1px solid black">Row 3, col 4</td>
+        <td>Row 3, col 1</td>
+        <td>Row 3, col 4</td>
       </tr>
 
       <tr>
-        <td style="border: 1px solid black">Row 4, col 1</td>
-        <td style="border: 1px solid black">Row 4, col 2</td>
-        <td colspan="2" style="border: 1px solid black">Row 4, col 3-4</td>
+        <td>Row 4, col 1</td>
+        <td>Row 4, col 2</td>
+        <td colspan="2">Row 4, col 3-4</td>
       </tr>
     </table>
   </body>
